--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body {
@@ -44,6 +45,7 @@ nav a:hover{
 
 .row {
     display: -ms-flexbox; /*IE10 */
+    display: -webkit-box;
     display: flex;
     -ms-flex-wrap: wrap; /*IR10 */
     flex-wrap: wrap;
@@ -51,20 +53,23 @@ nav a:hover{
 
 .side{
     -ms-flex: 70%; /* IE10 */
-    flex: 70%;
+    -webkit-box-flex: 70%;
+            flex: 70%;
     background-color: white;
     padding: 20px;
 }
 
 .main {
     -ms-flex: 70%; /*IE 10 */
-    flex: 70%;
+    -webkit-box-flex: 70%;
+            flex: 70%;
     background-color: white;
     padding: 20px;
 }
 
 .image-container {
-    box-shadow: 5px 5px 7px rgba(0, 0, 0, 3);
+    -webkit-box-shadow: 5px 5px 7px rgba(0, 0, 0, 3);
+            box-shadow: 5px 5px 7px rgba(0, 0, 0, 3);
     border: 5px solid #fff;
     width: 50%;
     overflow: hidden;
@@ -73,5 +78,6 @@ nav a:hover{
 .image-container img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
